<resources>
    <string name="app_name">喔啦共享商城</string>
    <string name="wechat_request_fail">发送微信支付请求失败</string>
    <string name="explore_confirm">请确认是否已经安装浏览器!</string>
    <string name="mobile_number">手机号码：</string>
    <string name="vacancies">余额</string>
    <string name="commission">佣金</string>
    <string name="commission_title">佣金：</string>
    <string name="my_services">我的服务</string>
    <string name="commission_details">佣金明细</string>
    <string name="consume_details">消费明细</string>
    <string name="vacancies_record">余额明细</string>
    <string name="my_extension">我的好友</string>
    <string name="invite_friend">邀请好友</string>
    <string name="withdraw">提现</string>
    <string name="mall_classify">商城分类</string>
    <string name="hot_information">热门资讯</string>
    <string name="live_service">生活服务</string>
    <string name="everyday_task">每日签到</string>
    <string name="hot_products">热门商品</string>
    <string name="everyday_new_products">每日上新</string>
    <string name="must_buy_quality_goods">必买好货</string>
    <string name="surprise_brand">惊喜品牌</string>
    <string name="vip_area">VIP专区</string>
    <string name="select_quality_goods">精选好物</string>
    <string name="promote_sales">促销活动</string>
    <string name="today_special_sale">今日特卖</string>
    <string name="more">更多</string>
    <string name="input_search_product_tip">请输入要搜索的商品</string>
    <string name="input_search_store_address_tip">请输入商家地址</string>
    <string name="input_self_mention_tip">请输入要搜索的自提点</string>
    <string name="input_search_shop_tip">请输入要搜索的商家</string>
    <string name="search">搜索</string>
    <string name="no_search_result_tip">没有相关商品哦~</string>
    <string name="search_content_no_empty">搜索内容不能为空！</string>
    <string name="have_no_message">没有消息</string>
    <string name="choose_write">(选填)</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登\t\t\t\t录</string>
    <string name="login_title">登录</string>
    <string name="edittext_username">请输入用户名</string>
    <string name="edittext_login_password">请输入密码</string>
    <string name="write_username_warning">请输入正确的用户名</string>
    <string name="input_pwd_warning">请输入登录密码</string>
    <string name="car_one_key_start_select">规格 请选择净含量型号</string>
    <string name="cancel">取消</string>
    <string name="go_telephony">拨打</string>
    <string name="tel_confirm">请确认拨号功能是否正常!</string>
    <string name="customer_service">客服</string>
    <string name="share">分享</string>
    <string name="product_detail">商品详情</string>
    <string name="buy">立即购买</string>
    <string name="add_cart">加入购物车</string>
    <string name="catg_refreshing">努力加载中···</string>
    <string name="get_verify_tips">获取中…</string>
    <string name="verification_tips">核销中…</string>
    <string name="publishing_tips">发布中…</string>
    <string name="no_net_tips">亲，网络加载失败哦~</string>
    <string name="refresh">重新加载</string>
    <string name="check_net_tips">请再次刷新或检查网络</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register_now">立即注册</string>
    <string name="phone_number">手机号码：%s</string>
    <string name="submit">提交</string>
    <string name="get_password">找回密码</string>
    <string name="reset_password">重置密码</string>
    <string name="not_get_warning">请不要重复获取</string>
    <string name="write_mobile_warning">请输入正确的手机号码</string>
    <string name="forget_Password_title">找回密码</string>
    <string name="modLoginPassword_title">管理登录密码</string>
    <string name="modPayPassword_title">管理支付密码</string>
    <string name="edittext_phone_number">请输入手机号码</string>
    <string name="edittext_verify_code">请输入短信验证码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_pay_password">请输入支付密码</string>
    <string name="password_tips">密码不得小于8位</string>
    <string name="pay_password_tips">支付密码不得小于6位</string>
    <string name="verify_code_tips">短信验证码不得小于6位</string>
    <string name="input_verify_warning">请输入验证码</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="exit">退出登录</string>
    <string name="setting_title">设置</string>
    <string name="card_quantity">%s张</string>
    <string name="address_manage">收货地址管理</string>
    <string name="about_ola">关于喔啦共享</string>
    <string name="version_name">版本%s</string>
    <string name="exit_tips">您确定要退出登录吗？</string>
    <string name="login_out_tips">退出登录中</string>
    <string name="add_card_tips">亲 ,为了方便提现\n记得添加银行卡哦~</string>
    <string name="add_card">添加银行卡</string>
    <string name="mine_card">我的银行卡</string>
    <string name="deposit_card">储蓄卡</string>
    <string name="credit_card">信用卡</string>
    <string name="bank_card_no">****\t\t\****\t\t****\t\t%s</string>
    <string name="delete_card_warning">确定要删除这张银行卡吗？</string>
    <string name="setting_tips">设置中…</string>
    <string name="confirm">确定</string>
    <string name="bank_name">银行名称</string>
    <string name="branch_bank_name">支行名称</string>
    <string name="card_number">银行卡号</string>
    <string name="card_type">银行卡类型</string>
    <string name="card_host">持卡人姓名</string>
    <string name="input_open_bank">请输入开户银行名称</string>
    <string name="input_open_branch_bank">请输入开户支行名称</string>
    <string name="input_card_number">请输入银行卡号</string>
    <string name="choose_card_type">请选择银行卡类型</string>
    <string name="input_card_host">请输入持卡人姓名</string>
    <string name="input_id_number">请输入身份证号</string>
    <string name="input_tel">请输入手机号码</string>
    <string name="select_card_type_warning">请选择银行卡类型</string>
    <string name="id_card">身份证号</string>
    <string name="tel_number">手机号码</string>
    <string name="set_default">设为默认</string>
    <string name="binding">绑定</string>
    <string name="input_bank_warning">请输入开户银行名称</string>
    <string name="input_branch_warning">请输入开户支行名称</string>
    <string name="input_card_warning">请输入正确的银行卡号</string>
    <string name="input_host_name_warning">请输入持卡人姓名</string>
    <string name="input_id_warning">请输入身份证号</string>
    <string name="input_phone_warning">请输入手机号</string>
    <string name="input_host_warning">请输入收货人姓名</string>
    <string name="binding_tips">绑定中…</string>
    <string name="no_address_tips">您还没有收货地址哦~</string>
    <string name="add_address">添加地址</string>
    <string name="addr_manager">管理地址</string>
    <string name="add">添加</string>
    <string name="delete_addr_tips">确定要删除该地址吗？</string>
    <string name="deleting_tips">删除中…</string>
    <string name="saving_tips">保存中…</string>
    <string name="receiver">收货人</string>
    <string name="input_receiver">请填写收货人姓名</string>
    <string name="mobile">手机号</string>
    <string name="input_mobile">请填写手机号</string>
    <string name="location">所在地</string>
    <string name="input_location">请填写所在地</string>
    <string name="detailed_address">详细地址</string>
    <string name="input_detailed_address">请填写详细地址</string>
    <string name="set_default_addr">设为默认地址</string>
    <string name="select_addr">选择地址</string>
    <string name="add_new_addr">添加新地址</string>
    <string name="change_addr">修改地址</string>
    <string name="input_addr_warning">请填写地址</string>
    <string name="input_addr_detail_warning">请填写详细地址</string>
    <string name="save">保存</string>
    <string name="login_tips">登录中…</string>
    <string name="register_title">注册</string>
    <string name="user_name">用户名</string>
    <string name="register_tips">注册中…</string>
    <string name="write_msg_warning">请输入完整信息</string>
    <string name="register_agreement_check">请仔细阅读协议</string>
    <string name="register_doc">点击注册，即表示您已同意《用户注册协议》</string>
    <string name="edittext_recommend_id">请输入好友ID号</string>
    <string name="edittext_password">请输入登录密码</string>
    <string name="phone_tips">手机号不得小于11位</string>
    <string name="version_code">喔啦共享 V%s</string>
    <string name="version_update">版本更新</string>
    <string name="about_our">关于我们</string>
    <string name="register_agreement">平台用户协议</string>
    <string name="privacy_ensure_agreement">隐私政策</string>
    <string name="new_version_tips">已经是最新版本</string>
    <string name="checking_version_tips">正在检测中…</string>
    <string name="no_product_tips">亲 ,暂无新产品哦~</string>
    <string name="mall">商城</string>
    <string name="no_order_tips">亲 ,您还没有相关订单哦~</string>
    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="finish_pay">已支付</string>
    <string name="finished">已完成</string>
    <string name="after_sale">售后</string>
    <string name="go_mall">去逛逛</string>
    <string name="go_pay">去支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="order_id">订单编号：%s</string>
    <string name="finish_deliver">已发货</string>
    <string name="in_return">退货中</string>
    <string name="refunded">已退款</string>
    <string name="good_num">共%s件商品  合计：</string>
    <string name="price">￥ %s</string>
    <string name="submitting_tips">提交中…</string>
    <string name="order">订单</string>
    <string name="message_center">消息中心</string>
    <string name="system_notice">系统通知</string>
    <string name="clear">清空</string>
    <string name="uploading_photo">上传身份证照片</string>
    <string name="certification_title">实名认证</string>
    <string name="skip_title">跳过</string>
    <string name="notice">亲，实名认证后才能进行下一步操作哦~</string>
    <string name="real_name">真实姓名</string>
    <string name="ID_number">身份证号</string>
    <string name="input_realName">请输入真实姓名</string>
    <string name="input_IDNumber">请输入15位或18位身份证号</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_id">请输入身份证号</string>
    <string name="add_card_title">添加银行卡</string>
    <string name="address_add">+\t添加收货地址</string>
    <string name="products_total_price">商品总价</string>
    <string name="commit_order">提交订单</string>
    <string name="detail">详情</string>
    <string name="please_inputAddress">请先添加收货地址</string>
    <string name="please_inputAddress_or_self_mention_point_address">请先添加收货地址或者选择自提点</string>
    <string name="ola_shop">喔啦共享商城</string>
    <string name="good_total_price">商品总价</string>
    <string name="total_product_num">共%s件商品  小计：</string>
    <string name="need_pay">需支付：<Data><![CDATA[<font color="#ea4140">%1$.2f</font>]]></Data>元</string>
    <string name="pay_type">支付方式：</string>
    <string name="pay_title">确认支付</string>
    <string name="cancel_pay_tips">是否取消支付？</string>
    <string name="cancel_pay">取消</string>
    <string name="confirm_pay">确定</string>
    <string name="checking_tips">验证中…</string>
    <string name="paying_tips">支付中…</string>
    <string name="set_pwd_tips">请先设置支付密码</string>
    <string name="go_to_open_app_notice">如需消息提醒推送，请前往打开通知，允许系统发送消息</string>
    <string name="pay_succeed">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="ali_explain">推荐有支付宝的用户使用</string>
    <string name="back">返回</string>
    <string name="check_order">查看订单</string>
    <string name="pay_fail_tips">支付遇到问题哦，请重新支付~</string>
    <string name="pay_again">重新支付</string>
    <string name="input_paypassword">输入支付密码</string>
    <string name="forget_paypassword">忘记支付密码？</string>
    <string name="filter">筛选</string>
    <string name="please_auth_tips">请认证您的真实身份</string>
    <string name="auth_tips">为保护账户安全，需要进行安全认证，我们承诺保护您的信息安全</string>
    <string name="personal_info">个人信息</string>
    <string name="bank_card_info">银行卡信息</string>
    <string name="perfect_info">完善身份信息</string>
    <string name="wait_for_perfect">待完善</string>
    <string name="add_bank_card_take_photo">拍照添卡</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="customer_info">顾客信息</string>
    <string name="product_name">商品名称</string>
    <string name="sale_value">售价</string>
    <string name="number">数量</string>
    <string name="effective_time">有效期</string>
    <string name="verification_right_now">已与顾客确认，立即核销</string>
    <string name="pay_value">付款：￥%s</string>
    <string name="back_home">返回首页</string>
    <string name="stroll_around_again">再逛逛</string>
</resources>