<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_default_color"
        >
        <include
            layout="@layout/view_actionbar"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_bank_card_take_photo"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textsize_14"
                android:textColor="@color/COLOR_FF666666"
                />

            <TextView
                android:id="@+id/tv_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/add_bank_card_take_photo"
                android:textColor="@color/COLOR_FF333333"
                android:textSize="@dimen/textsize_12"
                android:drawableTop="@mipmap/icon_camera"
                android:drawablePadding="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <LinearLayout
                android:id="@+id/ll_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/bank_name"
                    style="@style/add_bank_card_left"
                    />
                <TextView
                    android:id="@+id/tv_bank_name"
                    style="@style/add_bank_card_right"
                    android:hint="@string/input_open_bank"
                    android:drawableRight="@mipmap/go_next"
                    android:drawablePadding="@dimen/dp_8"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_default_color"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/branch_bank_name"
                    style="@style/add_bank_card_left"
                    />
                <EditText
                    android:id="@+id/et_branch_bank_name"
                    style="@style/add_bank_card_right"
                    android:hint="@string/input_open_branch_bank"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_default_color"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/card_number"
                    style="@style/add_bank_card_left"
                    />
                <EditText
                    android:id="@+id/et_card_number"
                    style="@style/add_bank_card_right"
                    android:hint="@string/input_card_number"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_default_color"
                />
            <LinearLayout
                android:id="@+id/ll_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/card_type"
                    style="@style/add_bank_card_left"
                    />
                <TextView
                    android:id="@+id/tv_card_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/COLOR_FF333333"
                    android:textSize="@dimen/textsize_14"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@mipmap/go_next"
                    android:drawablePadding="@dimen/dp_8"
                    android:hint="@string/choose_card_type"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/card_host"
                    style="@style/add_bank_card_left"
                    />
                <EditText
                    android:id="@+id/et_card_host"
                    style="@style/add_bank_card_right"
                    android:hint="@string/input_card_host"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_default_color"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/ID_number"
                    style="@style/add_bank_card_left"
                    />
                <EditText
                    android:id="@+id/et_id_number"
                    style="@style/add_bank_card_right"
                    android:hint="@string/input_id_number"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_default_color"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/tel_number"
                    style="@style/add_bank_card_left"
                    />
                <EditText
                    android:id="@+id/et_tel_number"
                    style="@style/add_bank_card_right"
                    android:hint="@string/input_tel"
                    />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_8"
            >
            <TextView
                android:text="@string/set_default"
                style="@style/add_bank_card_left"
                />

            <CheckBox
                android:id="@+id/btn_set_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_toggle_button"
                android:checked="false"
                android:scaleType="center"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_confirm_bind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_confirm_corner"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_12"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/confirm_bind"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </RelativeLayout>

    </LinearLayout>
    <View
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/COLOR_80000000"
        android:visibility="gone" />
    <com.kasa.ola.widget.LoadingView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</RelativeLayout>
